--- a/ArcadeMatch.Client/Controls/MatchResult.xaml
+++ b/ArcadeMatch.Client/Controls/MatchResult.xaml
@@ -1,42 +1,45 @@
 <UserControl
+    d:DesignHeight="500"
+    d:DesignWidth="700"
+    mc:Ignorable="d"
     x:Class="GameFinder.Controls.MatchResult"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:objects="clr-namespace:GameFinder.Objects"
-    mc:Ignorable="d"
-    d:DesignHeight="500"
-    d:DesignWidth="700">
+    xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
         <Grid.Background>
-            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+            <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                 <GradientStop Color="#10121A" Offset="0" />
                 <GradientStop Color="#05060A" Offset="1" />
             </LinearGradientBrush>
         </Grid.Background>
 
         <Grid Margin="20" RowDefinitions="Auto,*">
-            <StackPanel Grid.Row="0" Spacing="8" HorizontalAlignment="Center">
+            <StackPanel Grid.Row="0" HorizontalAlignment="Center">
                 <TextBlock
-                    x:Name="ResultText"
-                    Foreground="{DynamicResource AccentBrush}"
                     FontSize="32"
                     FontWeight="Bold"
+                    Foreground="{DynamicResource AccentBrush}"
+                    Text="Match results"
                     TextAlignment="Center"
-                    Text="Match results" />
+                    x:Name="ResultText" />
                 <TextBlock
-                    x:Name="SubtitleText"
                     Style="{DynamicResource BodyTextStyle}"
                     Text="Here are the games everyone loved."
-                    TextAlignment="Center" />
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="12" Margin="0,12,0,0">
+                    TextAlignment="Center"
+                    x:Name="SubtitleText" />
+                <StackPanel
+                    HorizontalAlignment="Center"
+                    Margin="0,12,0,0"
+                    Orientation="Horizontal">
                     <wpfui:Button
-                        x:Name="ShareButton"
                         Appearance="Secondary"
                         Click="CopyMatches_Click"
-                        Content="📋 Copy match list" />
+                        Content="📋 Copy match list"
+                        x:Name="ShareButton" />
                     <wpfui:Button
                         Appearance="Primary"
                         Click="Back_Click"
@@ -45,57 +48,67 @@
             </StackPanel>
 
             <Border
-                Grid.Row="1"
-                Margin="0,20,0,0"
                 Background="#1A1D2C"
                 CornerRadius="14"
+                Grid.Row="1"
+                Margin="0,20,0,0"
                 Padding="12">
-                <ScrollViewer x:Name="MatchesScrollViewer" VerticalScrollBarVisibility="Auto">
+                <ScrollViewer VerticalScrollBarVisibility="Auto" x:Name="MatchesScrollViewer">
                     <ItemsControl x:Name="MatchesList">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <WrapPanel HorizontalAlignment="Center" ItemWidth="220" ItemHeight="Auto" />
+                                <WrapPanel
+                                    HorizontalAlignment="Center"
+                                    ItemHeight="Auto"
+                                    ItemWidth="220" />
                             </ItemsPanelTemplate>
                         </ItemsControl.ItemsPanel>
                         <ItemsControl.ItemTemplate>
                             <DataTemplate DataType="{x:Type objects:MatchedGame}">
-                                <wpfui:Card Margin="8" Width="220" Padding="0">
+                                <wpfui:Card
+                                    Margin="8"
+                                    Padding="0"
+                                    Width="220">
                                     <Grid RowDefinitions="140,Auto,Auto">
-                                        <Border Grid.Row="0" ClipToBounds="True">
+                                        <Border ClipToBounds="True" Grid.Row="0">
                                             <Image Source="{Binding Data.HeaderImage}" Stretch="UniformToFill" />
                                         </Border>
-                                        <StackPanel Grid.Row="1" Margin="12" Spacing="4">
+                                        <StackPanel Grid.Row="1" Margin="12">
                                             <TextBlock
-                                                Text="{Binding Data.Name}"
                                                 FontWeight="SemiBold"
                                                 Foreground="White"
+                                                Text="{Binding Data.Name}"
                                                 TextWrapping="Wrap" />
                                             <TextBlock
-                                                Text="{Binding Data.ShortDescription}"
-                                                Foreground="#B0B7C3"
                                                 FontSize="12"
-                                                TextWrapping="Wrap"
-                                                TextTrimming="CharacterEllipsis" />
+                                                Foreground="#B0B7C3"
+                                                Text="{Binding Data.ShortDescription}"
+                                                TextTrimming="CharacterEllipsis"
+                                                TextWrapping="Wrap" />
                                             <TextBlock
-                                                Text="{Binding LikesDisplay}"
-                                                Foreground="#FFD166"
                                                 FontSize="12"
                                                 FontWeight="SemiBold"
+                                                Foreground="#FFD166"
+                                                Text="{Binding LikesDisplay}"
                                                 TextWrapping="Wrap" />
                                         </StackPanel>
-                                        <Grid Grid.Row="2" Margin="12" ColumnDefinitions="*,Auto" VerticalAlignment="Center">
+                                        <Grid
+                                            ColumnDefinitions="*,Auto"
+                                            Grid.Row="2"
+                                            Margin="12"
+                                            VerticalAlignment="Center">
                                             <TextBlock
-                                                Text="{Binding ParticipantsDisplay}"
-                                                Foreground="#B0B7C3"
                                                 FontSize="11"
+                                                Foreground="#B0B7C3"
+                                                Text="{Binding ParticipantsDisplay}"
                                                 VerticalAlignment="Center" />
                                             <wpfui:Button
-                                                Grid.Column="1"
                                                 Appearance="Transparent"
+                                                Click="OpenSteam_Click"
                                                 Content="🔗"
-                                                ToolTip="Open on Steam"
+                                                Grid.Column="1"
                                                 Tag="{Binding}"
-                                                Click="OpenSteam_Click" />
+                                                ToolTip="Open on Steam" />
                                         </Grid>
                                     </Grid>
                                 </wpfui:Card>
@@ -105,10 +118,27 @@
                 </ScrollViewer>
             </Border>
 
-            <StackPanel x:Name="NoMatchesPanel" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Spacing="12">
-                <TextBlock FontSize="48" Text="😕" HorizontalAlignment="Center" />
-                <TextBlock FontSize="20" FontWeight="SemiBold" Foreground="White" Text="No liked games yet." TextAlignment="Center" />
-                <TextBlock Foreground="#B0B7C3" Text="Try inviting more friends or broadening your libraries to keep swiping!" TextAlignment="Center" Width="320" TextWrapping="Wrap" />
+            <StackPanel
+                Grid.Row="1"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                x:Name="NoMatchesPanel">
+                <TextBlock
+                    FontSize="48"
+                    HorizontalAlignment="Center"
+                    Text="😕" />
+                <TextBlock
+                    FontSize="20"
+                    FontWeight="SemiBold"
+                    Foreground="White"
+                    Text="No liked games yet."
+                    TextAlignment="Center" />
+                <TextBlock
+                    Foreground="#B0B7C3"
+                    Text="Try inviting more friends or broadening your libraries to keep swiping!"
+                    TextAlignment="Center"
+                    TextWrapping="Wrap"
+                    Width="320" />
             </StackPanel>
         </Grid>
     </Grid>
