Extract shared client core library

--- a/ArcadeMatch.Client/Controls/MatchResult.xaml
+++ b/ArcadeMatch.Client/Controls/MatchResult.xaml
@@ -6,7 +6,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:objects="clr-namespace:GameFinder.Objects"
+    xmlns:objects="clr-namespace:GameFinder.Objects;assembly=ArcadeMatch.Core"
     xmlns:wpfui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
