--- a/ArcadeMatch.Avalonia/Controls/MatchResult.axaml
+++ b/ArcadeMatch.Avalonia/Controls/MatchResult.axaml
@@ -1,6 +1,6 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:objects="clr-namespace:GameFinder.Objects;assembly=ArcadeMatch.Avalonia"
+             xmlns:objects="clr-namespace:GameFinder.Objects;assembly=ArcadeMatch.Core"
              x:Class="ArcadeMatch.Avalonia.Controls.MatchResult"
              x:CompileBindings="False">
     <Grid>
